kubernetes/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: { { .ServiceName } }
  name: { { .ServiceName } }
spec:
  defaultBackend:
    service:
      name: { { .ServiceName } }
      port:
        number: 8080
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { .ServiceName } }
                port:
                  number: 8080
